--- a/src/component/StringCalculator/StringCalculator.css
+++ b/src/component/StringCalculator/StringCalculator.css
@@ -6,12 +6,18 @@
   padding: 10px;
   font-size: 16px;
 }
+
 .button {
   margin: 10px;
   padding: 10px;
   font-size: 16px;
 }
+
 .result {
   font-size: 18px;
   color: green;
+}
+.error {
+  font-size: 18px;
+  color: red;
 }
